# deta-persistent-sqlite

./: .detaignore  .gitignore  README.md  admin.py  apps.py  persistent_sqlite.py  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
cms/: admin.py  apps.py  models.py
cms/migrations/: 0001_initial.py
