[tool.poetry]
name = "django-database-backend"
version = "0.1.0"
description = ""
authors = ["Alexander Demin <alexander@demin.ws>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.13.0"
sqlparse = "^0.4.3"
django = "^4.1.3"
typer = {extras = ["all"], version = "^0.7.0"}
deta = "^1.1.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
autoflake = "^2.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
